--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,16 @@
   <title>FrontEndTestV2</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
-  <app-root></app-root>
+	
+  	<app-root></app-root>
+	
 </body>
+
 </html>
